<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_marginTop="@dimen/dimen_default_margin"
                                                   android:layout_marginStart="@dimen/dimen_default_margin"
                                                   android:layout_marginEnd="@dimen/dimen_default_margin"
                                                   android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView android:id="@+id/lblHome"
                                                 app:layout_constraintTop_toTopOf="parent"
                                                 app:layout_constraintLeft_toLeftOf="parent"
                                                 app:layout_constraintRight_toRightOf="parent"
                                                 app:autoSizeMaxTextSize="30sp"
                                                 app:autoSizeMinTextSize="12sp"
                                                 app:autoSizeStepGranularity="0.5sp"
                                                 app:autoSizeTextType="uniform"
                                                 android:layout_width="match_parent"
                                                 android:textAllCaps="true"
                                                 android:layout_height="wrap_content"
                                                 android:textSize="22sp"
                                                 android:textStyle="bold"
                                                 android:textColor="@color/colorPrimary"
                                                 android:text="@string/str_home"
                                                 android:focusable="true"
                                                 android:focusableInTouchMode="true"/>

    <androidx.appcompat.widget.AppCompatTextView android:id="@+id/txtWelcome"
                                                 app:layout_constraintTop_toBottomOf="@id/lblHome"
                                                 app:layout_constraintLeft_toLeftOf="parent"
                                                 app:layout_constraintRight_toRightOf="parent"
                                                 app:autoSizeMaxTextSize="30sp"
                                                 app:autoSizeMinTextSize="12sp"
                                                 app:autoSizeStepGranularity="0.5sp"
                                                 app:autoSizeTextType="uniform"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="wrap_content"
                                                 android:textSize="22sp"
                                                 android:textStyle="italic"
                                                 android:textColor="@color/colorAccent"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loEtHomeTitle"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/txtWelcome"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/str_title"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText android:id="@+id/etHomeTitle"
                                                                 android:layout_width="match_parent"
                                                                 android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loEtHomePost"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/loEtHomeTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/str_home_post_hint"
            android:layout_height="@dimen/dimen_default_et_height"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText android:id="@+id/etHomePost"
                                                                 android:layout_width="match_parent"
                                                                 android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat android:id="@+id/llAttachmentsCont"
                                                  android:layout_width="match_parent"
                                                  android:layout_height="wrap_content"
                                                  android:orientation="horizontal"
                                                  app:layout_constraintTop_toBottomOf="@id/loEtHomePost"
                                                  app:layout_constraintLeft_toLeftOf="parent"
                                                  app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.AppCompatTextView android:id="@+id/txtAttachment"
                                                     android:layout_width="0dp"
                                                     android:layout_height="wrap_content"
                                                     android:layout_gravity="center_vertical"
                                                     android:layout_weight="1"/>

        <FrameLayout android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
            <com.google.android.material.checkbox.MaterialCheckBox android:id="@+id/cbPrivate"
                                                                   android:layout_width="wrap_content"
                                                                   android:text="@string/str_private"
                                                                   android:layout_gravity="center"
                                                                   android:layout_height="wrap_content"/>
        </FrameLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat android:id="@+id/llButtonCont"
                                                  android:layout_width="match_parent"
                                                  android:layout_height="wrap_content"
                                                  android:orientation="horizontal"
                                                  app:layout_constraintTop_toBottomOf="@id/llAttachmentsCont"
                                                  app:layout_constraintLeft_toLeftOf="parent"
                                                  app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.AppCompatButton android:id="@+id/btnAttach"
                                                   android:layout_width="0dp"
                                                   android:layout_height="wrap_content"
                                                   android:text="@string/str_attach_image"
                                                   android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatButton android:id="@+id/btnPost"
                                                   android:layout_width="0dp"
                                                   android:layout_height="wrap_content"
                                                   android:text="@string/str_post"
                                                   android:layout_weight="1"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView android:id="@+id/lblPosts"
                                                 app:layout_constraintTop_toBottomOf="@id/llButtonCont"
                                                 app:layout_constraintLeft_toLeftOf="parent"
                                                 app:layout_constraintRight_toRightOf="parent"
                                                 android:layout_marginTop="@dimen/dimen_default_margin"
                                                 app:autoSizeMaxTextSize="30sp"
                                                 app:autoSizeMinTextSize="12sp"
                                                 app:autoSizeStepGranularity="0.5sp"
                                                 app:autoSizeTextType="uniform"
                                                 android:layout_width="match_parent"
                                                 android:textAllCaps="true"
                                                 android:layout_height="wrap_content"
                                                 android:textSize="22sp"
                                                 android:textStyle="bold"
                                                 android:textColor="@color/colorPrimary"
                                                 android:text="@string/str_latest_posts"
                                                 android:focusable="true"
                                                 android:focusableInTouchMode="true"/>

    <androidx.recyclerview.widget.RecyclerView android:id="@+id/rvPosts"
                                               app:layout_constrainedHeight="true"
                                               app:layout_constraintBottom_toBottomOf="parent"
                                               app:layout_constraintEnd_toEndOf="parent"
                                               app:layout_constraintHeight_default="spread"
                                               app:layout_constraintStart_toStartOf="parent"
                                               app:layout_constraintTop_toBottomOf="@id/lblPosts"
                                               app:layout_constraintWidth_default="wrap"
                                               android:requiresFadingEdge="vertical|horizontal"
                                               android:fadingEdgeLength="@dimen/dimen_default_fading_edge"
                                               android:layout_width="match_parent"
                                               android:layout_height="0dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>